# codecontext

./: .codecontext.yaml  .codecontext.yaml.example  .env.example  .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  codecov.yml  docker-compose.qdrant.yml  pyproject.toml  requirements-dev.txt
.claude/skills/codecontext/: SKILL.md  examples.md  reference.md
.codecontext/: start-chroma.sh
.github/workflows/: ci.yml  lint.yml  test.yml
docs/: README.md  architecture.md  development.md  hybrid-search.md  language-optimizers.md  lora-fine-tuning.md  naming-conventions.md  performance-optimization.md
docs/guides/: adding-new-language.md  choosing-embedding-model.md  custom-parsers.md  embedding-configuration.md  performance-tuning.md
docs/references/: api-reference.md  ast-patterns.md  path-filtering-research.md
quality_tests/: .gitignore  README.md  __init__.py  config.yaml  conftest.py  test_doc_code_link.py  test_document_code_linking.py  test_index_validation.py  test_indexing_performance.py  test_search_quality.py
quality_tests/fixtures/: ground_truth.toml  ground_truth.yaml
quality_tests/monitors/: __init__.py  progress_monitor.py
scripts/: README.md  chroma-cli.sh  clean-chromadb.py  dev-install.sh  install.sh  quality-report.sh  reinstall.sh  run-quality-tests.sh  setup-jemalloc.sh  uninstall.sh
tests/: conftest.py  helpers.py
tests/data/quality_results/: indexing_metrics.json
tests/fixtures/: __init__.py  assertions.py  builders.py  codebase.py  conftest.py  document_helpers.py  documents.py  extractor_helpers.py  factories.py  parser_helpers.py  parsers.py  response_samples.py  search_helpers.py  storage.py
tests/fixtures/config_files/: application.properties  application.yaml  package.json
tests/fixtures/ecommerce_samples/: .codecontext.toml  .codecontext.yaml  .codecontextignore  .gitignore
tests/fixtures/ecommerce_samples/docs/architecture/: api-design.md  system-architecture.md
tests/fixtures/ecommerce_samples/docs/business/: customer-tier.md  inventory-management.md  order-flow.md  payment-gateway.md  pricing-policy.md
tests/fixtures/ecommerce_samples/frontend/web/components/cart/: Cart.tsx
tests/fixtures/ecommerce_samples/frontend/web/components/checkout/: CheckoutFlow.tsx
tests/fixtures/ecommerce_samples/frontend/web/components/order/: OrderList.tsx
tests/fixtures/ecommerce_samples/frontend/web/services/: orderService.ts
tests/fixtures/ecommerce_samples/frontend/web/utils/: calculateShipping.js  formatPrice.js
tests/fixtures/ecommerce_samples/services/customer-service/src/main/kotlin/com/ecommerce/customer/domain/: Customer.kt  CustomerTier.kt
tests/fixtures/ecommerce_samples/services/customer-service/src/main/kotlin/com/ecommerce/customer/service/: CustomerService.kt
tests/fixtures/ecommerce_samples/services/inventory-service/src/: inventory_service.py
tests/fixtures/ecommerce_samples/services/inventory-service/src/models/: product.py
tests/fixtures/ecommerce_samples/services/order-service/src/main/java/com/ecommerce/order/controller/: OrderController.java
tests/fixtures/ecommerce_samples/services/order-service/src/main/java/com/ecommerce/order/domain/: Order.java  OrderItem.java  OrderStatus.java
tests/fixtures/ecommerce_samples/services/order-service/src/main/java/com/ecommerce/order/service/: OrderService.java
tests/fixtures/ecommerce_samples/services/payment-service/src/: payment_gateway.py  payment_service.py
tests/fixtures/ecommerce_samples/services/payment-service/src/models/: payment.py
tests/fixtures/test_samples/docs/: CACHE.md  CIRCUIT_BREAKER.md  KAFKA.md
tests/fixtures/test_samples/related_group_1_settlement/: PaymentRepository.kt  SettlementCalculator.kt  SettlementService.kt
tests/fixtures/test_samples/related_group_1_settlement/docs/: settlement_guide.md
tests/fixtures/test_samples/related_group_2_file/: FileRepository.kt  FileService.kt
tests/fixtures/test_samples/related_group_2_file/docs/: file_api_guide.md
tests/fixtures/test_samples/unrelated_group/: CacheConfig.kt  ElasticTemplate.kt  KafkaConsumer.kt
tests/integration/: test_config_indexing.py  test_parser_integration.py  test_python_cast_chunking.py  test_simple_index_search.py  test_sync_workflows.py
tests/performance/: benchmark.py  memory_stress_test.py  profile_indexing.py
tests/unit/core/: test_instruction_type.py
tests/unit/embeddings/huggingface/: test_dynamic_batch.py  test_instruction.py  test_lora_loading.py
tests/unit/formatters/: test_base_formatter.py  test_document_formatter.py
tests/unit/indexer/: test_extractor.py  test_incremental_sync.py  test_language_detection.py
tests/unit/indexer/sync/checksum/: __init__.py  test_optimizer.py
tests/unit/indexer/sync/discovery/: __init__.py  test_file_scanner.py
tests/unit/parsers/: test_config_parser.py  test_factory.py  test_typescript_parser.py
tests/unit/parsers/common/: test_text_splitters.py
tests/unit/parsers/common/chunkers/: test_code_object_chunker.py
tests/unit/parsers/language_optimizers/: test_java_optimizer.py  test_kotlin_optimizer.py  test_python_optimizer.py  test_typescript_optimizer.py
tests/unit/search/: test_diversity_filter.py  test_graph_expander.py  test_mmr.py  test_tokenizer.py
tests/unit/storage/: test_stable_hash.py
tests/unit/storage/chromadb/: test_provider_search.py  test_provider_upsert.py
tests/unit/utils/: test_checksum.py  test_git_ops.py  test_path_filter.py  test_project_identifier.py
